deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fr-stock-ticker
  labels:
    app: fr-stock-ticker
    service: fr-stock-ticker
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    service: fr-stock-ticker
